--- a/styles.css/portfolio.css
+++ b/styles.css/portfolio.css
@@ -7,33 +7,45 @@
   font-family: 'Poppins', sans-serif;
   box-sizing: border-box;
 }
+html{
+  scroll-behavior: smooth;
+}
 body{
   background-color: black;
   color: white;
 }
-header{
-  height: 10vh;
-  padding: 20px 10%;
+#header{
+  height: 100vh;
+  width: 100%;
+  background-image: url(images/backgroundpic.jpeg);
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
 }
 .container{
-  /* padding: 20px 10%; */
-  background-color: black;
+  padding: 10px 10%;
 }
 nav{
   display: flex;
   justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
   
 }
+nav #logo{
+  width: 100px;
+  height: 100%;
+}
 nav ul{
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+  display: block;
   flex-wrap: wrap;
   width: 50%;
 
 }
 nav ul li{
+  display: inline-block;
   list-style: none;
+  margin: 10px 20px;
 }
 nav ul li a{
   color: white;
@@ -54,42 +66,31 @@ nav ul li a::after{
 nav ul li a:hover::after{
   width: 100%;
 }
-nav #logo{
-  width: 100px;
-  height: 100%;
-}
-main{
-  background-image: url(images/backgroundpic.jpeg);
-  height: 90vh;
-  background-size: cover;
-  background-position: center;
-  display: flex;
-  justify-content: end;
-  padding: 5%;
-  margin-bottom: 50px;
-}
-main p{
-  margin-bottom: 20px;
-}
+
+
 .headertext{
-  margin-top: 10%;
-  font-size: 25px;
+  margin-top: 18%;
+  font-size: 30px;
+  float: right;
 }
-main span{
+.headertext h1{
+  font-size: 60px;
+  margin-top: 20px;
+}
+.headertext span{
   color:#ff004f; 
 }
 /* -----------------------about--------------------- */
 #about{
-  /* height: 100vh; */
   padding: 20px 10%;
   color: #ababab;
+  margin-top: 20px;
   
 }
 .row{
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
-  /* padding: 0px 50px; */
 }
 .about-col-1{
   flex-basis: 35%;
@@ -197,3 +198,226 @@ main span{
 }
 
 /* <!-- -------------------------------------portfolio------------------------------- --> */
+
+#portfolio{
+  padding: 50px 0;
+}
+.work-list{
+  display: grid;
+  grid-template-columns: repeat(auto-fit,minmax(250px,1fr));
+  grid-gap: 40px;
+  margin-top: 50px;
+}
+.work{
+  border-radius: 10px;
+  position: relative;
+  overflow: hidden;
+}
+.work img{
+  width: 100%;
+  border-radius: 10px;
+  display: block;
+  height: 500px;
+  transition: transform 0.5s;
+}
+.layer{
+  width: 100%;
+  height: 0%;
+  background: linear-gradient(rgba(0,0,0,0.6),#ff004f);
+  border-radius: 10px;
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  overflow: hidden;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  padding: 0 40px;
+  text-align: center;
+  font-size: 14px;
+  transition: height 0.5s;
+}
+.layer h3{
+  font-weight: 500;
+  margin-bottom: 20px;
+}
+.layer a{
+  margin-top: 20px;
+  color: #ff004f;
+  text-decoration: none;
+  line-height: 60px;
+  background: #fff;
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
+
+}
+.work:hover img{
+  transform:scale( 1.1);
+}
+.work:hover .layer{
+  height: 100%;
+}
+
+.btn{
+  display: block;
+  margin: 50px auto;
+  width: fit-content;
+  border: 1px solid #ff004f;
+  padding: 14px 50px;
+  border-radius: 6px;
+  text-decoration: none;
+  color: white;
+  transition: background 0.5s;
+}
+.btn:hover{
+  background: #ff004f;
+}
+/* -----------------------------------contact------------------------ */
+.cot-left{
+  flex-basis: 35%;
+}
+.cot-right{
+  flex-basis: 60%;
+}
+.cot-left p{
+  margin-top: 30px;
+  margin-bottom: 30px;
+}
+.cot-left p i{
+  color: #ff004f;
+  margin-right: 15px;
+  font-size: 25px;
+}
+.social a{
+  text-decoration: none;
+  font-size: 30px;
+  margin-right: 15px;
+  color: #ababab;
+  display: inline-block;
+  transition: transform 0.5s;
+}
+.social a:hover{
+  color: #ff004f;
+  transform: translateY(-5px);
+}
+.btn.btn2{
+  display:inline-block;
+  background-color: #ff004f;
+}
+.cot-right form{
+  width: 100%;
+}
+form input,textarea{
+  width: 100%;
+  border: 0;
+  outline: none;
+  background: #262626;
+  color: white;
+  padding: 15px;
+  margin: 15px 0;
+  font-size: 18px;
+  border-radius: 6px;
+}
+.submitbtn{
+  display: inline-block;
+  background: #ff004f;
+  color: white;
+  padding: 14px 60px;
+  font-size: 18px;
+  margin-top: 20px;
+  cursor: pointer;
+
+}
+footer{
+  width: 100%;
+  text-align: center;
+  padding: 25px 0;
+  background: #262626;
+  font-weight: 300;
+  margin-top: 20px;
+}
+footer i{
+  color: #ff004f;
+}
+/* -----------------------------css for small sceens----------------------------- */
+nav .fa-solid{
+ display: none;
+}
+@media only screen and (max-width: 600px){
+  #header{
+    background: url(images/ssbp.jpg);
+    background-position: center;
+    background-attachment: fixed;
+    background-size: cover;
+  }
+  .headertext{
+    margin-top: 100%;
+    font-size: 16px;
+  }
+  .headertext h1{
+    font-size: 30px;
+  }
+  
+  nav .fa-solid{
+    display: block;
+    font-size: 25px;
+  }
+  nav ul{
+    background: #ff004f;
+    position: fixed;
+    top: 0;
+    right: -200px;
+    width: 200px;
+    height: 100vh;
+    padding-top: 50px;
+    z-index: 2;
+    transition: right 0.5s ;
+  }
+  nav ul li{
+    display: block;
+    margin: 25px;
+  }
+  nav ul .fa-solid{
+    position: absolute;
+    top: 25px;
+    left: 25px;
+    cursor: pointer;
+  }
+    .sub-title{
+      font-size: 40px;
+    }
+    .about-col-1,.about-col-2{
+      flex-basis: 100%;
+    }
+    .row{
+      display: flex;
+      flex-direction: column-reverse;
+      justify-content: space-between;
+      flex-wrap: wrap;
+    }
+    .about-col-1{
+      margin-bottom: 100px;
+    }
+    .about-col-2{
+      font-size: 14px;
+    }
+    .tab-links{
+      font-size: 16px;
+      margin-right: 20px;
+    }
+    .cot-left, .cot-right{
+      flex-basis: 100%;
+    }
+    footer{
+      font-size: 14px;
+    }
+    .container{
+    }
+}
+#msg{
+  color: #61b752;
+  margin-top: -40px;
+  display: block;
+}
