--- a/styles.css/portfolio.css
+++ b/styles.css/portfolio.css
@@ -393,7 +393,7 @@ nav .fa-solid{
     }
     .row{
       display: flex;
-      flex-direction: column-reverse;
+      flex-direction: column;
       justify-content: space-between;
       flex-wrap: wrap;
     }
