--- a/styles.css/portfolio.css
+++ b/styles.css/portfolio.css
@@ -347,12 +347,14 @@ nav .fa-solid{
 }
 @media only screen and (max-width: 600px){
   #header{
-    background: url(images/ssbp.jpg);
+    background: url(images/ssbg.jpeg);
     background-position: center;
+    background-attachment: fixed;
     background-size: cover;
   }
+
   .headertext{
-    margin-top: 100%;
+    margin-top: 80%;
     font-size: 16px;
   }
   .headertext h1{
@@ -412,7 +414,9 @@ nav .fa-solid{
     footer{
       font-size: 14px;
     }
-    .container{
+    nav #logo{
+      width: 70px;
+      margin-right: -20px;
     }
 }
 #msg{
